# Generator

./: .gitmodules  CMakeLists.txt  README.md  conanfile.py
.github/workflows/: build.yml
src/: definitions.h  generator.cpp  generator.h  pcm.cpp  pcm.h
